# ha-fortum

./: .gitignore  .pre-commit-config.yaml  AGENTS-dashboard.md  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  ha-frontend-release.json  hacs.json  my-energy-strategy.js  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  country_support_request.md  feature_request.md
.github/workflows/: ci.yml  validate.yml
custom_components/fortum/: __init__.py  button.py  config_flow.py  const.py  coordinators.py  device.py  entity.py  exceptions.py  logging_utils.py  manifest.json  migrations.py  models.py  sensor.py  session_manager.py  strings.json  utils.py
custom_components/mittfortum/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  models.py  schedulers.py  sensor.py  strings.json
docs/: dashboard.md  development.md  fortum-api.md
scripts/: release-trigger-checks.sh  sync-ha-frontend.sh  test-ha-frontend-compat.sh
tests/: conftest.py
tests/e2e/: test_live_api.py
tests/fixtures/: hourly_gap_backfill_fixture.json
tests/frontend/: test_adaptive_15m_fixture.cjs  test_adaptive_bucket_math.cjs  test_debug_export_redaction.cjs  test_ha_frontend_compat.cjs  test_metering_point_discovery.cjs  test_multipoint_runtime.cjs  test_multipoint_strategy_editor_state.cjs  test_runtime_config.cjs  test_single_resolution.cjs  test_single_strategy_editor_state.cjs  test_strategy_validation.cjs
tests/integration/: test_integration.py
tests/unit/: test_button.py  test_config_flow.py  test_coordinator.py  test_device.py  (+7 more)
(+60 files in other folders)
