[project]
name = "fortum"
version = "3.0.7"
description = "Home Assistant custom integration for Fortum"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "PyJWT",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "homeassistant",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pre-commit>=4.0",
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = false
warn_unreachable = false
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
explicit_package_bases = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--asyncio-mode=auto",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: Live end-to-end tests against Fortum",
    "slow: Slow running tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
